--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -108,10 +108,11 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = myBezier, 0.05, 0.9, 0.2, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    animation = windows, 1, 5, myBezier
+    animation = windowsIn, 1, 4, default, popin 30%
+    animation = windowsOut, 1, 5, default, popin 30%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
