change keymap SUPER+% to open rofi applet powermenu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -174,7 +174,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, ugrave, exec, adios --systemd
+bind = $mainMod, ugrave, exec, ~/.config/rofi/applets/bin/powermenu.sh # adios --systemd
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
