few modifications + avoid using deprecated wsbind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 monitor=eDP-1,    1920x1080@240, 1920x0, 1
 monitor=HDMI-A-1, 2560x1080@144, 0x0,    1
 monitor=desc:Dell Inc. DELL P2722HE 6G71WN3, preferred, 0x0, 1
+# monitor=HDMI-A-1, 1920x1080, 0x0, 1, mirror, eDP-1
 
 # exec-once = ~/.config/hypr/deskmon.sh
 
@@ -24,11 +25,16 @@ exec = cpupower-gui pr Normal
 
 workspace = eDP-1, 10
 workspace = DP-1, 1
-wsbind = 10, eDP-1
-wsbind = 1, DP-1
-wsbind = 1, HDMI-A-1
-wsbind = , DP-1
-wsbind = , HDMI-A-1
+# wsbind = 10, eDP-1
+# wsbind = 1, DP-1
+# wsbind = 1, HDMI-A-1
+# wsbind = , DP-1
+# wsbind = , HDMI-A-1
+workspace = 10, monitor:eDP-1, default:true
+workspace = 1, monitor:DP-1, default:true
+workspace = 1, monitor:HDMI-A-1, default:true
+# workspace = , monitor:DP-1
+# workspace = , monitor:HDMI-A-1
 
 # https://www.reddit.com/r/hyprland/comments/11lpxcq/config_to_turn_off_main_laptop_display_when/
 # trigger when the switch is turning off
@@ -37,7 +43,7 @@ bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1080, 
 bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
 
 ## IDLE
-exec-once = swayidle -w timeout 300 'swaylock -C ~/.config/hypr/swaylock.conf' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle -w timeout 600 'swaylock -C ~/.config/hypr/swaylock.conf' timeout 700 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 exec = sway-audio-idle-inhibit
 
 ## swaybar
@@ -80,7 +86,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 7
     border_size = 2
     col.active_border = rgba(B4BEFE80) # rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -91,7 +97,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 2
     blur = false
     blur_size = 3
     blur_passes = 1
@@ -158,19 +164,20 @@ windowrule=float, title:^(Firefox - Indicateur de partage)$
 windowrulev2=float, class:org.gnome.Nautilus
 windowrule=float, title:^(.*)(1Password)(.*)$
 windowrule=float, title:^(.*)(Calculatrice)(.*)$
+windowrulev2=float, class:([zZ]oom)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty
-bind = $mainMod, C, killactive, 
+bind = $mainMod, C, killactive,
 bind = $mainMod, dollar, exit,
 bind = $mainMod, F, fullscreen,
 # bind = $mainMod, space, exec, rofi -config ~/.config/hypr/rofi/config.rasi -show drun
 # bind = CONTROL, SUPER_L, exec, rofi -config ~/.config/hypr/rofi/config.rasi -show drun
 bind = CONTROL, SUPER_L, exec, ~/.config/rofi/scripts/launcher_t7
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -229,3 +236,11 @@ bindel=, XF86MonBrightnessDown, exec, light -U 5
 
 # Screenshot
 bind = , print, exec, grim -g "$(slurp)" - | swappy -f -
+
+# Submap to disable SUPER keybindings in some cases, such as Virtualbox
+# See: https://www.reddit.com/r/hyprland/comments/14ciuft/super_key_grabbing_in_remmina/
+# and https://wiki.hyprland.org/Configuring/Binds/#submaps
+bind = CTRL $mainMod, D, submap, clean
+submap = clean
+bind = CTRL $mainMod, D, submap, reset
+submap = reset
