some modifications in hyprland.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,6 +59,11 @@ bind = SUPER, L, exec, swaylock -C ~/.config/hypr/swaylock.conf
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+# env = GBM_BACKEND,nvidia-drm
+env = WLR_DRM_NO_ATOMIC,1
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 
 # Lower sent frame when nothing is happening
@@ -165,6 +170,8 @@ windowrulev2=float, class:org.gnome.Nautilus
 windowrule=float, title:^(.*)(1Password)(.*)$
 windowrule=float, title:^(.*)(Calculatrice)(.*)$
 windowrulev2=float, class:([zZ]oom)
+windowrulev2=tile, class:^(libreoffice)(.*$)
+# windowrule=tile, title:^(.*)(LibreOffice)(.*)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -240,7 +247,7 @@ bind = , print, exec, grim -g "$(slurp)" - | swappy -f -
 # Submap to disable SUPER keybindings in some cases, such as Virtualbox
 # See: https://www.reddit.com/r/hyprland/comments/14ciuft/super_key_grabbing_in_remmina/
 # and https://wiki.hyprland.org/Configuring/Binds/#submaps
-bind = CTRL $mainMod, D, submap, clean
+bind = ALT $mainMod, D, submap, clean
 submap = clean
-bind = CTRL $mainMod, D, submap, reset
+bind = ALT $mainMod, D, submap, reset
 submap = reset
