maj config workspace pour écrans externes + maj config blur

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,6 +25,10 @@ exec = cpupower-gui pr Normal
 
 workspace = eDP-1, 10
 workspace = DP-1, 1
+workspace = DP-2, 1
+workspace = DP-3, 1
+workspace = DP-4, 1
+workspace = DP-5, 1
 # wsbind = 10, eDP-1
 # wsbind = 1, DP-1
 # wsbind = 1, HDMI-A-1
@@ -103,10 +107,12 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 2
-    blur = false
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
+    blur {
+        enabled = no
+        size = 3
+        passes = 1
+        new_optimizations = true
+    }
 
     drop_shadow = false
     shadow_range = 4
