use hyprland/workspaces instead of wlr/workspaces in waybar

--- a/.config/hypr/waybar/waybar.conf
+++ b/.config/hypr/waybar/waybar.conf
@@ -1,12 +1,11 @@
 {
 	"layer": "top",
-	"modules-left": ["wlr/workspaces"],
+	"modules-left": ["hyprland/workspaces"],
 	"modules-center": ["custom/media"],
 	"modules-right": ["pulseaudio", "backlight", "battery", "clock", "tray", "custom/power"],
 	"sway/window": {
 		  "max-length": 50
 	},
-
 
   "custom/media": {
       "format": "{icon} {}",
@@ -44,14 +43,14 @@
       "format-icons": ["", "", ""],
       "on-click": "pavucontrol"
   },
-  "wlr/workspaces": {
+  "hyprland/workspaces": {
       "format": "{icon}",
       "on-click": "activate",
       "on-scroll-up": "hyprctl dispatch workspace e+1",
       "on-scroll-down": "hyprctl dispatch workspace e-1",
       "format": "{icon}",
       "format-icons": {
-          "default": "●"
+         "default": "●"
       }
   },
   "tray": {
